src/content/docs/platform/v2.3.0/index.mdx
---
title: Altitude Platform v2.3.0
description: Documentation for Altitude Platform version 2.3.0
---

# Altitude Platform v2.3.0

Welcome to the documentation for Altitude Platform version 2.3.0. This version includes significant improvements and new features compared to previous versions.

## What's New in v2.3.0

- **Enhanced Edge Functions**: Further improvements to edge function performance and capabilities
- **Advanced KV Store**: Extended KV store functionality with TTL support and atomic operations
- **Real-time Monitoring**: Live monitoring dashboard with real-time metrics
- **Multi-team Collaboration**: Enhanced team management with role-based access control
- **Advanced CI/CD Integration**: Improved CI/CD pipeline integration with detailed deployment reports

## Getting Started

To get started with Altitude Platform v2.3.0, check out the following guides:

- [Creating a Site](/docs/platform/v2.3.0/guides/create-a-site)
- [Advanced Edge Functions](/docs/platform/v2.3.0/guides/advanced-edge-functions)
- [Using the KV Store](/docs/platform/v2.3.0/guides/kv-store)
- [Team Collaboration](/docs/platform/v2.3.0/guides/team-collaboration)

## Upgrading from Previous Versions

If you're upgrading from a previous version, please review the migration guides:

- [Upgrading from v2.2.0](/docs/platform/v2.3.0/guides/migrating-from-v2.2)
- [Upgrading from v2.1.0](/docs/platform/v2.3.0/guides/migrating-from-v2.1)
- [Upgrading from v2.0.0](/docs/platform/v2.3.0/guides/migrating-from-v2.0)

## Version History

- **v2.3.0** (Current): Enhanced monitoring and collaboration features
- [v2.2.0](/docs/platform/v2.2.0): Performance improvements and bug fixes
- [v2.1.0](/docs/platform/v2.1.0): Feature enhancements and API improvements
- [v2.0.0](/docs/platform/v2.0.0): Major release with new features