src/content/docs/platform/v2.4.0/index.mdx
---
title: Altitude Platform v2.4.0
description: Documentation for Altitude Platform version 2.4.0
---

# Altitude Platform v2.4.0

Welcome to the documentation for Altitude Platform version 2.4.0. This version includes significant improvements and new features compared to previous versions.

## What's New in v2.4.0

- **Health Checks**: Configure health check endpoints for your Cloudflare Worker functions to enable automatic failover to GKE/workerd when workers become unhealthy
- **Enhanced Edge Functions**: Further improvements to edge function performance and capabilities
- **Advanced KV Store**: Extended KV store functionality with TTL support and atomic operations
- **Real-time Monitoring**: Live monitoring dashboard with real-time metrics
- **Multi-team Collaboration**: Enhanced team management with role-based access control
- **Advanced CI/CD Integration**: Improved CI/CD pipeline integration with detailed deployment reports

## Getting Started

To get started with Altitude Platform v2.4.0, check out the following guides:

- [Creating a Site](/docs/platform/v2.4.0/guides/create-a-site)
- [Health Checks](/docs/platform/v2.4.0/edge/health-checks)
- [Edge Functions](/docs/platform/v2.4.0/edge/functions)
- [Using the KV Store](/docs/platform/v2.4.0/edge/kv-store)

## Upgrading from Previous Versions

If you're upgrading from v2.3.0, please review the migration guide:

- [Upgrading from v2.3.0](/docs/platform/v2.4.0/guides/migrating-from-v2.3)

## Version History

- **v2.4.0** (Current): Health checks and automatic failover support
- [v2.3.0](/docs/platform/v2.3.0): Enhanced monitoring and collaboration features
- [v2.2.0](/docs/platform/v2.2.0): Performance improvements and bug fixes
- [v2.1.0](/docs/platform/v2.1.0): Feature enhancements and API improvements
